# poker44-first

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
neurons/: miner.py
poker44/: compare.py  ensemble.py  ensemble_predict.py
poker44/artifacts_ensemble/: ensemble.json
poker44/model-transformer-for-45k-dataset/: README.md  __init__.py  data.py  dataset.py  features.py  metrics.py  model.py  predict.py  test.py  train.py
poker44/model_lightgbm/: __init__.py  data.py  dataset.py  features.py  metrics.py  model.py  predict.py  train.py
poker44/model_lightgbm/artifacts/: model.json  model.txt
poker44/model_mlp/: __init__.py  dataset.py  features.py  model.py  predict.py  train.py
poker44/model_mlp/artifacts/: model.pt
poker44/model_transformer/: __init__.py  data.py  dataset.py  features.py  metrics.py  model.py  predict.py  train.py
poker44/model_transformer/artifacts/: model.pt
poker44/utils/: config.py
poker44_ml/: calibration.py  coherence.py  features.py  inference.py  live_capture.py
scripts/miner/: check_manifest.py
